<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/a_adiendo_persona"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/foto"
            android:layout_width="246dp"
            android:layout_height="268dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/fotografia"
            android:foreground="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnfoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/foto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="350sp"
            android:layout_height="55sp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins"
            android:hint="@string/nombres"
            android:inputType="text"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnfoto" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="350sp"
            android:layout_height="55sp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombres" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="350sp"
            android:layout_height="55sp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellidos" />

        <EditText
            android:id="@+id/edad"
            android:layout_width="350sp"
            android:layout_height="55sp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins"
            android:hint="@string/edad"
            android:inputType="number"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correo" />

        <Button
            android:id="@+id/guardar"
            android:layout_width="350sp"
            android:layout_height="70sp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/poppins"
            android:text="@string/guardar"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edad"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
